petclinic-ingress-host.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: petclinic-ingress
  namespace: dev
spec:
  ingressClassName: nginx
  rules:
    - host: config.wecall.space
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: config-server
                port:
                  number: 8888

    - host: discovery.wecall.space
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: discovery-server
                port:
                  number: 8761

    - host: customers.wecall.space
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: customers-service
                port:
                  number: 8081

    - host: visits.wecall.space
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: visits-service
                port:
                  number: 8082

    - host: vets.wecall.space
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vets-service
                port:
                  number: 8083

    - host: genai.wecall.space
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: genai-service
                port:
                  number: 8084

    - host: api.wecall.space
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 8080

    - host: tracing.wecall.space
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tracing-server
                port:
                  number: 9411

    - host: admin.wecall.space
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: admin-server
                port:
                  number: 9090
